adding simple login div rectangle

--- a/Anthem/src/index.html
+++ b/Anthem/src/index.html
@@ -3,11 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Anthem</title>
-  <base href="/">
+  <base href="">
+  <link rel="stylesheet" href="./styles.css" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+	<app-root></app-root>
+	<div id="loginpage">
+		<h1 id="loginh1">Sign in</h1>
+		<p id="username">username:</p>
+		<p id="password">password:</p>
+	</div>
 </body>
 </html>
