--- a/Anthem/src/index.html
+++ b/Anthem/src/index.html
@@ -2,18 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Anthem</title>
-  <base href="">
-  <link rel="stylesheet" href="./styles.css" type="text/css">
+  <title>ExampleUI</title>
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-	<app-root></app-root>
-	<div id="loginpage">
-		<h1 id="loginh1">Sign in</h1>
-		<p id="username">username:</p>
-		<p id="password">password:</p>
-	</div>
+  <app-root></app-root>
 </body>
 </html>
